--- a/wp-content/themes/nu-start/__precomp/source/css/admin.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/admin.scss
@@ -56,10 +56,11 @@
 				// 
 				.components-circular-option-picker__option-wrapper {
 					margin: 0 !important;
-					width: 32px;
-					height: 32px;
 				}
 			}
 		}
 	}
 }
+
+// .is-root-container[data-is-drop-zone="true"]{
+// }
