--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_index.scss
@@ -5,6 +5,7 @@
 @import "./cover";
 @import "./group";
 @import "./mediatext";
+@import "./navigation-block";
 @import "./paragraph";
 @import "./pullquote";
 @import "./separator";
