--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/faq-sections/_type-a.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/faq-sections/_type-a.scss
@@ -1,4 +1,12 @@
-
 .nu_pattern-is_faq-section--is_type_a {
-
+	.wp-block-nublocks-accordion-item__content > .wp-block-image.size-full:first-child {
+        margin-bottom: $margin_2x;
+		margin-top: -$margin_2x;
+		margin-left: -$base-margin;
+		width: calc(100% + #{$margin_2x});
+		max-width: calc(100% + #{$margin_2x});
+		img {
+			width: 100%;
+		}
+	}
 }
