--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/features/_type-e.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/features/_type-e.scss
@@ -12,27 +12,11 @@
 	
 */
 .nu_pattern-is_feature--is_type_e {
-	&.wp-block-group.has-background {
-		padding: $margin_4x $margin_2x;
-		max-width: 80%;
-	}
 
-	@media screen and (max-width: 1280px) {
-		> .wp-block-columns {
-			flex-flow: column nowrap;
-			> .wp-block-column {
 
-				&:last-child {
-					margin: $margin_4x 0 0 0;
-				}
-				&:first-child {
-					
-				}
-			}
-		}
-	}
 
-	@media screen and (max-width: 780px) {
+	p.has-12-16-font-size a {
+		padding-bottom: $half-margin;
 	}
 
 }
