--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/heros/_banner_type-b.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/heros/_banner_type-b.scss
@@ -1,42 +1,24 @@
-.nu_pattern-is_hero_banner--type-b {
-	.wp-block-column {
+/* 
 
-		p {
-			margin: $base-margin 0 0 0;
-			&:first-child {
-				margin: 0;
-			}
-		}
-		h2 {
-			margin: 5px 0 0 -2px;
-		}
+	*	full-overlay hero:
+	?	a gradient overlay is used over the image, darkening it enough to use white text
 
-		.wp-block-buttons {
+*/
+
+.nu_pattern--hero--full-overlay {
+
+	.wp-block-buttons {
+		&:last-child {
 			margin-top: $margin_2x;
 		}
 	}
+	
 
-	.wp-block-cover__inner-container {
-		.wp-block-columns {
-			&:only-child {
-				margin: 0;
-			}
-
-			&:not(.is-not-stacked-on-mobile)
-				> .wp-block-column:not(:only-child) {
-				@media (min-width: 600px) and (max-width: 781px) {
-					margin: 0;
-				}
-			}
-		}
+	.wp-block-columns:first-child:last-child {
+		margin-bottom: 0;
 	}
-
-	@media screen and (max-width: 960px) {
-		.wp-block-column {
-			flex-basis: 100% !important;
-			&:last-child {
-				display: none;
-			}
-		}
+	
+	p.has-36-40-font-size {
+		margin: $base-margin 0 $margin_2x 0;
 	}
 }
