latest work migrating to MAMP because local isnt stable enough

--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/heros/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/heros/_index.scss
@@ -2,12 +2,7 @@
 
 */
 
-// 
-@import './type-a';
-@import './type-b';
-@import './type-c';
-@import './type-d';
-@import './type-e';
-@import './banner_type-a';
-@import './banner_type-b';
-@import './banner_type-c';
+@import "./hero--card-style";
+@import "./hero--full-overlay";
+@import "./hero--vertical-split";
+@import "./hero--video-bg";
